Regression: OBJ Importer fails to import objects #110948
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#110948
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA RTX A4000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 528.24
Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-08 20:16, hash:
5cdec2f12ab0
Worked: 3.6 (Only Legacy Importer)
The New OBJ importer (introduced some releases ago) fails importing some objects (it is consistent in different tries, it skips always the same objects). This issues are present only with the new importer, the Legacy importer (no longer present in 4.0) works fine, albeit slowly.
I have this issue with many files similar to the one attached.
I opened the same files with different softwares, they all read all objects.
import the obj with new importer, then import it with legacy importer; see that the new one skip some objects
[Based on the default startup or an attached .blend file (as simple as possible)]
I attached the obj, but it doesn't appear in the task, maybe because of the size
@Andrew-Woods you could maybe share the file with wetransfer or some other services? Looks like it shouldn't be a huge file.
Sure! here it is
https://we.tl/t-tAQ6zY7BGm
it got heavy because it's been exported from Rhino and there is much unnecessary geometry
I have other files but I prefer share them privately because of sensitive data, if you need them
Will look into this, thanks! I think at least one issue might be what is pointed out in the console when importing that repro: "OBJ file contains a line 1820372 that is too long (max. length 65536)" (there's one polygon with over 6000 vertices in the file). Maybe some other issues too, will investigate.
New OBJ Importer fails to import objectsto Regression: OBJ Importer fails to import objects@aras_p If this has worked before, is it high priority regression?
A workaround/fix was checked in as
3bf2757b47
. Is this being kept Open to work further on another solution?