source/blender/io/wavefront_obj/importer/obj_importer.hh
@@ -18,6 +18,6 @@ void importer_main(Main *bmain,
                    Scene *scene,
                    ViewLayer *view_layer,
                    const OBJImportParams &import_params,
-                   size_t read_buffer_size = 64 * 1024);
+                   size_t read_buffer_size = 256 * 1024);
 
 }  // namespace blender::io::obj
